# q-divide

./: .gitignore  Cargo.toml  Pipfile  README.md  prepare_circuit.pyi
notebooks/: count_tdepth_check.ipynb  count_tgate.ipynb  experiment-dist-select.ipynb  experiment-initial.ipynb  experiment-qasm.ipynb  experiment-redundant-qubit.ipynb  experiment-sub.ipynb  experiment_m_body.ipynb  layered_qrom.ipynb
notebooks/tgate_counter/: __init__.py  counter.py  eval.py  qrom.py  test.py
pyimpl/: __init__.py  qrom.py
src/: gates.rs  lib.rs  primitive.rs  pyfunctions.rs  pyzx.rs  qasm.rs  select_gates.rs  util.rs
src/pyfunctions/: dist_select_simple.rs  internal.rs  json_based.rs  m_body.rs  qasm_layered.rs  tests.rs
src/pyzx/: json.rs  json_status.rs  serialize_utils.rs  to_json.rs
src/qasm/: operations.rs  serialize_utils.rs  to_qasm.rs
src/select_gates/: data_combine.rs  simple_dist_select.rs  simple_select_controls.rs
test/: depth-20.json
